# frontstage

./: .env.example  .gitignore  Dockerfile  LICENSE  debunking.en.md  docker-compose.yml  pyproject.toml  readme.en.md  readme.md  readme.noen.md  requirements.txt  tasks.py
.claude/: CLAUDE.md  INDEX.md  SELFCHECK.md  settings.json  settings.local.json
.claude/commands/: aicommit.md  pytest.md
.claude/docs/: auth.md  catalog.md  invoke-commands.md  logging.md  plugins.md  troubleshooting.md
.claude/hooks/: run_tests.sh
catalog/apis/: api-esp-async.yaml  api-internal-grpc.yaml  api-procurement-rest.yaml  api-public-rest.yaml
catalog/databases/: database-clients-postgres.yaml  database-events-kafka.yaml  database-orders-postgres.yaml  database-products-elasticsearch.yaml  database-session-redis.yaml  database-users-postgres.yaml
catalog/libraries/: library-audit-log.yaml  library-auth-sdk.yaml  library-ui-kit.yaml
catalog/services/: service-admin-panel.yaml  service-crm-service.yaml  service-frontend-app.yaml  service-inventory-service.yaml  service-logistics-service.yaml  service-notification-service.yaml  service-procurement-service.yaml  service-user-service.yaml
catalog/teams/: team-backend.yaml  team-data.yaml  team-frontend.yaml
docs/: logo.html
docs/catalog/: README.md  SPEC.md  debunking.md
nginx/: nginx.conf
src/: auth.py  logger.py  main.py
src/catalog/: __init__.py  models.py  parser.py
src/plugins/: base.py  (+4 more)
tests/: conftest.py  test_api_auth.py  test_catalog_filter.py  test_catalog_models.py  test_catalog_parser.py  test_html_auth.py
(+23 files in other folders)
